Lobby bug fixes and improvements Add auto-scroll to bottom Add 'Show Computer Opponents' switch Add support for seek requests with 'manual' flag Fix bug, inconsistent margin collapsing on lobby table Fix bug, console output not being displayed while viewing lobby Remove '?' from lobby table entries. Send 'unex' when user selects new game to examine or sends a seek or match request. Split cleanup function into two functions, one for cleaning up after a game finishes and the other one for disconnecting from the server. Add (C) suffix onto Computer names in Observe list

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -375,3 +375,9 @@ ul.list-striped > li {
               0 4px 6px -4px rgba(0, 0, 0, 0.2),
               0 -4px 6px -4px rgba(0, 0, 0, 0.2);
 }
+
+/* Fix margin collapse glitch */
+#lobby-table .btn:not(:last-child) {
+  margin: 0px;
+  border-bottom: none;  
+}
